# rn-perf-checker

./: CONTRIBUTING.md  LICENSE  README.md  RnPerfChecker.podspec  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle
android/src/main/java/com/rnperfchecker/: FabricCommitMonitor.kt  JSLongTaskMonitor.kt  MemoryMonitor.kt  RNPerfCheckerBridge.kt  RNPerfCheckerJSI.kt  RnPerfCheckerModule.kt  RnPerfCheckerPackage.kt  UIFPSMonitor.kt  ViewUtils.kt
cpp/: HostObjectTracker.cpp  HostObjectTracker.h  PerfState.h  RNPerfCheckerJSI.cpp
example/: app.json  package.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/rnperfchecker/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/RnPerfCheckerExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/RnPerfCheckerExample.xcodeproj/: project.pbxproj
example/ios/RnPerfCheckerExample.xcodeproj/xcshareddata/xcschemes/: RnPerfCheckerExample.xcscheme
example/src/: App.tsx
hermes-patch/: applyPatch.js  buildHermes.js  detectRN.js  index.js  package.json  utils.js
hermes-patch/patches/: 0.79.x.patch
ios/: HermesPerfBridge.mm  JSLongTaskMonitor.mm  MemoryMonitor.swift  RNPerfBridge.swift  RNPerfModule.swift  RnPerfChecker.h  RnPerfChecker.mm  UIFPSMonitor.swift
scripts/: enableHermesInstrumentation.js
src/: NativeRnPerfChecker.ts  index.tsx
